# SALES-TRACKER

./: BUILD_README.md  DEPENDENCY_FIX.md  DEPLOYMENT.md  IMPORT_FIX.md  PRODUCTION_READY.md  SETUP_GUIDE.md  TEST_FIX_README.md  build_all.bat  build_all.sh  build_exclude.txt  build_mac.sh  build_win.bat
.github/workflows/: ci.yml
build-output/: BUILD_INFO.txt  GITHUB_READY.md  build_linux.sh  deploy_docker.sh  docker-build.bat
build-output/cloud-backend/: .env.example  README.md
build-output/cloud-backend/app/: main.py  models.py  schemas.py  security.py
build-output/cloud-backend/app/scripts/: simulate_sync.py
build-output/py-sales-tracker/: README.md
build-output/py-sales-tracker/app/: theme.py
build-output/py-sales-tracker/app/ai/: cache.py  config.py  embeddings.py  (+2 more)
build-output/py-sales-tracker/tests/: test_forecast.py  test_queue.py  test_sync_backoff.py
cloud-backend/: Dockerfile  docker-compose.yml  requirements.txt
cloud-backend/app/: db.py
cloud-backend/app/templates/: admin.html
py-sales-tracker/: conftest.py  pyinstaller.spec  pyproject.toml  requirements.txt  run_tests.py
py-sales-tracker/app/: main.py
py-sales-tracker/app/ai/: embeddings.py  rag.py
py-sales-tracker/app/data/: models.py
py-sales-tracker/app/services/: migrate.py  seed.py
py-sales-tracker/app/widgets/: ai_insights.py  dashboard.py  inventory.py  sales_entry.py
py-sales-tracker/models/embeddings/: README.md
py-sales-tracker/tests/: test_admin_guard.py  test_forecast.py  test_imports.py  test_queue.py  test_quick_insights.py  test_rag.py  test_sync_backoff.py
(+6 files in other folders)
